# SMA-REACT

./: .gitignore  .readthedocs.yaml  1_preprocessor_GUI.py  Area_GUI.py  Geometry_Code_For_GUI.py  Geometry_Code_In_Console.py  LICENSE  Main (console).py  README.md  TEST- main.py  TEST_data_reader.py  data_reader.py  high_pass_filter.py  launch_GUI.py  launch_calibration_GUI.py  launch_preprocessor_GUI.py  loading_screen.py  main.py  main_with_GUI.py  moving_average_filter.py  optimal_model_0.csv  optimal_model_1.csv  optimal_model_2.csv  optimal_model_3.csv  optimal_model_4.csv  plot_3d.py  plot_dsc.py  plot_temp_vs_strain.py  pyproject.toml  smaeat_gui.py  test_GUI.py  test_tab.py  troubleshoot_window.py
GUI_Code/: Geometry_Code_In_Console.py  MTS_ONLY.xlsx  analyze_fluke_and_mts.py  analyze_mts_only.py  metadata.csv  metadata.pkl  moving_average_filter.py  plot_temp_vs_strain.py  smaeat_gui.py  smaeat_gui.ui  smaeat_gui_new.py  test.py
MATLAB conversion Test Code/: TEST_Implicit_rev_transformation_correction_stress.py
MATLAB to Python codes/: DEAP_NSGA2_Main.py  Elastic_Transformation_check_RI_stress.py  Elastic_Transformation_check_stress.py  Explicit_Transformation_Correction_stress.py  Explicit_fwd_transformation_correction_stress.py  Explicit_rev_transformation_correction_stress.py  Full_Model_stress.m  Full_Model_stress.py  H_cursolver.py  Implicit_Transformation_Correction_stress.py  Implicit_fwd_transformation_correction_stress.py  Implicit_rev_transformation_correction_stress.py  barplottingexample.py  concatandplotex.py  dynamic_plot.py  popLog.bak  (+14 more)
(+294 files in other folders)
