#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"

[project]
name = "SMA_REACT"
version = "1.0.0"
description = "SMA_REACT package"
authors = [{name = "Patrick Walgren and Jacob Mingear"}]
requires-python = ">=3.9, <3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pyqt5==5.15.10",
    "scikit-learn",
    "scipy",
    "deap"
]
