[project]
name = "SMA_REACT"
version = "1.0.0"
description = "SMA_REACT package"
authors = [{name = "Patrick Walgren and Jacob Mingear"}]
requires-python = ">=3.9, <3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pyqt5==5.15.10",
    "scikit-learn",
    "scipy",
    "deap"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["SMA_REACT_GUI", "src", "src.*"]

[tool.setuptools.package-data]
"src.preprocessor.media" = ["*.png"]

[project.scripts]
sma-react-preprocessor = "SMA_REACT_GUI.preprocessor_GUI:main_cli"
sma-react-calibration = "SMA_REACT_GUI.calibration_GUI:main_cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
